--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 .DS_Store
 *.pem
 .claude/*
+.eslintcache
 
 # debug
 npm-debug.log*
@@ -40,3 +41,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# 
