--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@eslint-react/eslint-plugin": "^1.52.3",
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.32.0",
+    "@next/eslint-plugin-next": "^15.4.5",
     "@tailwindcss/postcss": "^4",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/node": "^20",
