--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,13 +4,38 @@
 #   https://lefthook.dev/configuration/
 #
 
+
+pre-commit:
+  jobs:
+    - name: format
+      glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
+      run: pnpm exec biome format --write  --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
+      stage_fixed: true
+
+    - name: lint
+      glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
+      run: pnpm lint {staged_files}
+      stage_fixed: true
+
+    - name: check
+      run: pnpm check
+
+
 pre-push:
   parallel: true
   jobs:
-    - name: biome-check
-      glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
-      run: pnpm exec biome check --write --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
+    - name: test
+      run: pnpm test -- --watchAll=false --bail --passWithNoTests
+      stage_fixed: true
 
-    - name: next-lint
-      run: pnpm exec next lint --fix --no-cache --report-unused-disable-directives --max-warnings=0
+    - name: build
+      run: pnpm build
+      stage_fixed: true
+
+    - name: deploy
+      run: pnpm deploy
+      stage_fixed: true
+
+    - name: check
+      run: pnpm check
 
