--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@eslint-react/eslint-plugin": "^1.52.3",
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.32.0",
-    "@next/eslint-plugin-next": "^15.4.5",
     "@tailwindcss/postcss": "^4",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/node": "^20",
@@ -47,13 +46,11 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9",
-    "eslint-config-next": "15.4.1",
+    "eslint-config-next": "^15.4.5",
     "eslint-plugin-better-tailwindcss": "^3.7.2",
-    "eslint-plugin-perfectionist": "^4.15.0",
     "knip": "^5.62.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.5",
     "typescript": "^5",
     "typescript-eslint": "^8.38.0"
   },
